fullSandbox11072023/force-app/main/default/objects/VAC_Member_s__c/VAC_Member_s__c.object-meta.xml
<CustomObject>
    <label>VAC Member(s)</label>
    <nameField>
        <displayFormat>VAC-{00000}</displayFormat>
        <label>VAC Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VAC Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>