fullSandbox11072023/force-app/main/default/objects/VAC_Member_s__c/fields/Supporter__c.field-meta.xml
<CustomField>
    <fullName>Supporter__c</fullName>
    <label>Supporter</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>