fullSandbox11072023/force-app/main/default/objects/VAC_Member_s__c/fields/VACMembercontact__c.field-meta.xml
<CustomField>
    <fullName>VACMembercontact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>VAC Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>VAC Members</relationshipLabel>
    <relationshipName>VAC_Members</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>