fullSandbox11072023/force-app/main/default/objects/VAC_Member_s__c/fields/WhySupporterisColdWarmHot__c.field-meta.xml
<CustomField>
    <fullName>WhySupporterisColdWarmHot__c</fullName>
    <label>Why Supporter is Cold/Warm/Hot?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>