fullSandbox11072023/force-app/main/default/objects/VAC_Member_s__c/fields/WillbeVAC__c.field-meta.xml
<CustomField>
    <fullName>WillbeVAC__c</fullName>
    <label>Will be @ VAC</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>